Updated height property in CSS to prevent overflow

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
 
 .main {
   max-width: 600px;
-  height: 90vh;
+  min-height: 90vh;
   background-image: url("/images/paper-background.jpg");
   background-size: 50% cover;
   border: 1px solid #878787;
